<resources>
    <string name="app_name">MyTaxi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvGreetingsOnStartAuth">Для начала создайте аккаунт</string>
    <string name="etNameHint">Ваше имя</string>
    <string name="etSurnameHint">Ваша фамилия</string>
    <string name="etMailHint">Адрес электронной почты</string>
    <string name="etPhoneHint">Номер телефона</string>
    <string name="etPasswordHint">Пароль</string>
    <string name="etCityHint">Город</string>
    <string name="etBonusCodeHint">Бонус-код</string>
    <string name="btnContinue">Продолжить</string>
    <string name="tvPartnershipGreetings">Выберите вариант партнерства с нами:</string>
    <string name="tvAddPhotosGreetings">Добро пожаловать,</string>
    <string name="tvAddPhotosNextSteps">Следующие шаги для настройки аккаунта:</string>
    <string name="btnDoneReg">Завершить</string>
    <string name="btnTakePhoto">Снимок</string>
    <string name="btnRetakePhoto">Еще раз</string>
    <string name="tvRecommendations">Сфотографируйте документ так, чтобы в кадр попали все углы. Убедитесь, что документ четко виден.</string>
    <string name="tvMakePhotoDocPassport">Сфотографируйте разворот с фотографией паспорта</string>
    <string name="toastPhoto">Проверьте фото</string>
    <string name="toastPartnership">Выберите вариант партнерства</string>
    <string name="dlBackLabel">Водительское удостоверение - обратная сторона</string>
    <string name="dlFaceLabel">Водительское удостоверение - лицевая сторона</string>
    <string name="passportLabel">Паспорт - разворот с фотографией</string>
    <string name="btnSave">Сохранить</string>
    <string name="delivery">Доставка</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="go">Поехали</string>
    <string name="заказать">Заказать</string>


</resources>