<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.DriverAddPhotosFragment">

    <TextView
        android:id="@+id/tvAddPhotosGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvAddPhotosGreetings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddPhotosNextSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvAddPhotosNextSteps"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAddPhotosGreetings"
        app:layout_constraintStart_toStartOf="@+id/tvAddPhotosGreetings"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPhotosGreetings" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnDoneReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPhotosNextSteps"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDoneReg"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnDoneReg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>