<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.DriverAuthMakePhotoFragment">

    <TextView
        android:id="@+id/tvMakePhotoDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:text="@string/tvMakePhotoDocPassport"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRecommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tvRecommendations"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMakePhotoDoc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPhoto"
        android:layout_width="300dp"
        android:layout_height="390dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecommendations">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="370dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/cardPhoto"
        app:layout_constraintStart_toStartOf="@+id/cardPhoto"
        app:layout_constraintTop_toBottomOf="@+id/cardPhoto" />

    <Button
        android:id="@+id/btnRetakePhoto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btnRetakePhoto"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/cardPhoto"
        app:layout_constraintStart_toStartOf="@+id/cardPhoto"
        app:layout_constraintTop_toBottomOf="@+id/cardPhoto" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cardPhoto"
        app:layout_constraintEnd_toEndOf="@+id/cardPhoto"
        app:layout_constraintStart_toStartOf="@+id/cardPhoto"
        app:layout_constraintTop_toBottomOf="@+id/tvRecommendations"
        tools:src="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/pbPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cardPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecommendations" />
</androidx.constraintlayout.widget.ConstraintLayout>