<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvDelivery"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_rowWeight="10"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/darkerWhite"
    app:cardCornerRadius="30dp"
    tools:context=".presentation.activities.DriverMapsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imDelivery"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_baseline_delivery_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delivery"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imDelivery"
            app:layout_constraintStart_toEndOf="@+id/imDelivery"
            app:layout_constraintTop_toTopOf="@+id/imDelivery" />

        <ImageView
            android:id="@+id/imStartCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_panorama_fish_eye_24"
            app:layout_constraintEnd_toEndOf="@id/imDelivery"
            app:layout_constraintStart_toStartOf="@+id/imDelivery"
            app:layout_constraintTop_toBottomOf="@+id/imDelivery" />

        <EditText
            android:id="@+id/etStart"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/from"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/imStartCircle"
            app:layout_constraintEnd_toEndOf="@+id/cvBigCar"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/imStartCircle" />

        <ImageView
            android:id="@+id/imEndCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_panorama_fish_eye_24"
            app:layout_constraintEnd_toEndOf="@id/imDelivery"
            app:layout_constraintStart_toStartOf="@+id/imDelivery"
            app:layout_constraintTop_toBottomOf="@+id/imStartCircle" />

        <EditText
            android:id="@+id/etEnd"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/to"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/imEndCircle"
            app:layout_constraintEnd_toEndOf="@+id/cvBigCar"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/imEndCircle" />

        <View
            android:id="@+id/dividerV"
            android:layout_width="1dp"
            android:layout_height="120dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEnd" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/backGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@id/dividerV"
            app:layout_constraintTop_toBottomOf="@+id/etEnd">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imCar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_car_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Стандарт"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imCar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="Цена"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCar" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBigCar"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/backGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/clBottom"
            app:layout_constraintStart_toEndOf="@id/dividerV"
            app:layout_constraintTop_toBottomOf="@+id/etEnd">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imBigCar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_freight_car_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBigCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:text="Грузовой"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imBigCar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="Цена"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBigCar" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btnChooseAuto"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/backYellow"
                android:text="Выбрать размер"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_baseline_credit_card_24"
                app:layout_constraintTop_toTopOf="@id/btnChooseAuto"
                app:layout_constraintBottom_toBottomOf="@id/btnChooseAuto"
                app:layout_constraintEnd_toStartOf="@id/btnChooseAuto"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_baseline_compare_arrows_24"
                app:layout_constraintTop_toTopOf="@id/btnChooseAuto"
                app:layout_constraintBottom_toBottomOf="@id/btnChooseAuto"
                app:layout_constraintStart_toEndOf="@id/btnChooseAuto"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
